light mode fixed

--- a/src/app.css
+++ b/src/app.css
@@ -72,8 +72,9 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    /* color: #747bff; */
     background-color: #ffffff;
+    color: black;
   }
   a:hover {
     color: #747bff;
